--- a/project/MelotonMaster.vcxproj
+++ b/project/MelotonMaster.vcxproj
@@ -167,6 +167,8 @@
     <ClCompile Include="..\message\MessageWrite.pb.cc" />
     <ClCompile Include="..\source\MelotonMaster.cpp" />
     <ClCompile Include="..\source\MelotonSession.cpp" />
+    <ClCompile Include="..\source\NodeSession.cpp" />
+    <ClCompile Include="..\source\NodeSessionPool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\handler\MessageAliveHandler.h" />
@@ -190,6 +192,8 @@
     <ClInclude Include="..\include\MelotonSession.h" />
     <ClInclude Include="..\include\NodeListener.h" />
     <ClInclude Include="..\include\NodeSession.h" />
+    <ClInclude Include="..\include\NodeSessionPool.h" />
+    <ClInclude Include="..\include\ObjectPool.h" />
     <ClInclude Include="..\message\MessageAlive.pb.h" />
     <ClInclude Include="..\message\MessageBlockAccept.pb.h" />
     <ClInclude Include="..\message\MessageBlockData.pb.h" />
