--- a/project/MelotonMaster.vcxproj
+++ b/project/MelotonMaster.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="..\message\MessageSyncBlock.pb.cc" />
     <ClCompile Include="..\message\MessageWrite.pb.cc" />
     <ClCompile Include="..\source\BlockMeta.cpp" />
+    <ClCompile Include="..\source\ClientPool.cpp" />
+    <ClCompile Include="..\source\ClientSession.cpp" />
     <ClCompile Include="..\source\ClientTokenPool.cpp" />
     <ClCompile Include="..\source\DirectorMeta.cpp" />
     <ClCompile Include="..\source\FileDictionary.cpp" />
@@ -196,6 +198,7 @@
     <ClInclude Include="..\handler\MessageSyncBlockHandler.h" />
     <ClInclude Include="..\handler\MessageWriteHandler.h" />
     <ClInclude Include="..\include\BlockMeta.h" />
+    <ClInclude Include="..\include\ClientPool.h" />
     <ClInclude Include="..\include\ClientSession.h" />
     <ClInclude Include="..\include\ClientTokenPool.h" />
     <ClInclude Include="..\include\DirectorMeta.h" />
