--- a/project/MelotonMaster.vcxproj.filters
+++ b/project/MelotonMaster.vcxproj.filters
@@ -103,6 +103,12 @@
     <ClCompile Include="..\source\FileDictionary.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\ClientSession.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ClientPool.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\message\MessageAlive.pb.h">
@@ -254,6 +260,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\include\ClientSession.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ClientPool.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
