--- a/project/MelotonMaster.vcxproj.filters
+++ b/project/MelotonMaster.vcxproj.filters
@@ -112,6 +112,12 @@
     <ClCompile Include="..\source\ClientListener.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="..\message\MessageTell.pb.cc">
+      <Filter>message</Filter>
+    </ClCompile>
+    <ClCompile Include="..\message\MessageTellACK.pb.cc">
+      <Filter>message</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\message\MessageAlive.pb.h">
@@ -270,6 +276,18 @@
     </ClInclude>
     <ClInclude Include="..\include\ClientListener.h">
       <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\handler\MessageTellACKHandler.h">
+      <Filter>handler</Filter>
+    </ClInclude>
+    <ClInclude Include="..\handler\MessageTellHandler.h">
+      <Filter>handler</Filter>
+    </ClInclude>
+    <ClInclude Include="..\message\MessageTell.pb.h">
+      <Filter>message</Filter>
+    </ClInclude>
+    <ClInclude Include="..\message\MessageTellACK.pb.h">
+      <Filter>message</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
